re PR target/22432 (Wrong code generation using MMX intrinsics on amd64)

./:	PR target/22432
	* combine.c (apply_distributive_law): Don't distribute across a
	vector mode subreg.
testsuite/:
2005-11-05  Ian Lance Taylor  <ian@airs.com>

	PR target/22432
	* gcc.target/i386/pr22432.c: New test.

From-SVN: r106556